--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 
 <html lang="ja">
 <head>
-    <meta name="viewport" content="width=1900">
+    <meta name="viewport">
     <meta charset="utf-8"/>
     <title>ShuoGG AI Waifu</title>
 </head>
 <body>
 <!-- Canvas -->
-<canvas id="SAMPLE" width="2000" height="2000">
+<canvas id="SAMPLE" width="1000" height="1000">
     <code>&lt;canvas&lt;</code>
 </canvas>
 
