--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 
-<html lang="ja">
+<html>
 <head>
     <meta name="viewport">
     <meta charset="utf-8"/>
     <title>ShuoGG AI Waifu</title>
 </head>
 <body>
-<!-- Canvas -->
-<canvas id="SAMPLE" width="1000" height="1000">
-    <code>&lt;canvas&lt;</code>
+<canvas id="WAIFU" width="800" height="380">
 </canvas>
-
-<script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js "></script>
 <script src="./Core/live2dcubismcore.min.js"></script>
 <script src="./dist/index.js"></script>
 </body>
