--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <canvas id="WAIFU" width="600" height="1450"></canvas>
 <button id="btn">+</button>
 
-<script src="./Core/live2dcubismcore.min.js"></script>
+<script src="./resources/live2dcubismcore.min.js"></script>
 <script src="./dist/index.js"></script>
 </body>
 </html>
