修复touch area不准的问题

--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
         }
 
         #view {
-            width: 660px;
-            height: 800px;
+            width: 550px;
+            height: 700px;
             overflow: hidden;
         }
 
         #WAIFU {
             position: relative;
-            top: -185px;
+            top: -490px;
+            left: -360px
         }
     </style>
 </head>
 <body>
 <div id="view">
     <button id="btn">+</button>
-    <canvas id="WAIFU" width="1000" height="1000"></canvas>
+    <canvas id="WAIFU" width="1500" height="1500"></canvas>
 </div>
 
 <script src="./resources/live2dcubismcore.min.js"></script>
