--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
     <button id="btn">+</button>
     <canvas id="WAIFU" width="1500" height="1500"></canvas>
 </div>
-
+<script>
+    window.addEventListener('onL2dTap', ({detail: tapPart}) => {
+        console.log(tapPart)
+    })
+</script>
 <script src="./resources/live2dcubismcore.min.js"></script>
 <script src="./resources/effect.js"></script>
 <script src="./dist/index.js"></script>
